--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to DOCKERIZED WEBSERVER!</h1>
+<h1>Welcome to DOCKERIZED NGINX!</h1>
 
 <p><a href=https://github.com/gorbyo/nginx-lua>GitHub repo</a>.<br/></p>
 
