--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <h1>Welcome to DOCKERIZED Nginx!</h1>
 
-<p><a href=https://github.com/gorbyo/nginx-lua>GitHub repo</a>.<br/></p>
+<p><a href=https://github.com/gorbyo/nginx-lua>GitHub WebHooks not works via IPv6</a>.<br/></p>
 
 </body>
 </html>
